Init music launcher from the system

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="botoFin">Detener</string>
     <string name="tituloAct">Utilización de Servicios</string>
     <string name="music_button_info">Iniciar música</string>
+    <string name="choose_button_info">Choose Music from player</string>
 </resources>
