--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="init_train_service">Initialized Train Service</string>
     <string name="init_music_service">Initialized Music Service</string>
     <string name="init_custom_music_service">Initialized custom music service</string>
+    <string name="own_music_player_button">Music Player Propio</string>
 </resources>
